--- a/ex026/MQ005/estilos/style.css
+++ b/ex026/MQ005/estilos/style.css
@@ -1,5 +1,61 @@
 @charset "UTF-8";
 
-body{
+*{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+body, html{
     background-color: lightgray;
+}
+
+header{
+    background-color: gray;
+}
+
+header > h1{
+    padding: 10px;
+    text-align: center;
+}
+
+menu{
+    display: block;
+}
+
+menu > ul{
+    list-style-type: none;
+}
+
+menu a{
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    background-color: rgb(68, 68, 68);
+    color: white;
+    text-align: center;
+    border-top: 1px solid gray;
+}
+
+menu a:hover{
+    background-color: rgb(153, 152, 152);
+}
+
+main{
+    width: 90vw;
+    background-color: white;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+article > h2{
+    padding-bottom: 20px;
+}
+
+article > p{
+    text-align: justify;
+    margin-bottom: 20px;
+    text-indent: 20px;
 }
